# backend/routes/user.js
@@ -12,6 +12,7 @@ router.post('/v1/user/login', userModel.login);
 router.post('/v1/blog', blogModel.createBlog);
 router.get('/v1/blog/:id', blogModel.getBlog);
 router.get('/v1/blogs/recent', blogModel.getRecentBlog);
+router.put('/v1/blog/:id/comment', blogModel.commentBlog);
 router.delete('/v1/blog/:id', blogModel.deleteBlog);
 router.get('/v1/blogs', blogModel.getBlogs);
 
