# backend/swagger/swagger.yml
@@ -109,6 +109,25 @@ paths:
           description: ''
         '400':
           description: no enough input
+  /v1/blog/{id}/comment:
+    put:
+      tags:
+        - blog
+      parameters:
+        - in: path
+          name: id
+          description: 博客ID
+        - in: body
+          name: body
+          description: 评论
+          schema:
+            $ref: '#/definitions/commontBlog'
+      description: 评论博客
+      responses:
+        '200':
+          description: ''
+        '400':
+          description: no enough input
     delete:
       tags:
         - blog
@@ -175,7 +194,13 @@ definitions:
         type: string
       author: 
         type: string
-
+  commontBlog:
+    type: object
+    properties:
+      body: 
+        type: string
+      commentator: 
+        type: string
 tags:
   - name: user
     description: 用户相关API
