# front/src/models/blog.js
@@ -9,7 +9,10 @@ const Index = {
     },
     getRecentBlog(){
         return axios.get(`/v1/blogs/recent`) 
-    }
+    },
+    commentBlog(id, params){
+        return axios.put(`/v1/blog/${id}/comment`, params) 
+    },
 }
 
 export default Index;
